# fpm-py

./: .gitignore  LICENSE  MODULE_README.md  README.md  example-eval.py  example.py  example_data_gen.py  example_eval_datagen.py  module_readme.md  output.tiff  pyproject.toml  setup.py
.github/workflows/: documentate.yml  publish.yml  version_increment.yml
experimental/: main.py  test.py  values.py
fpm_py/: __init__.py  algorithm.py  base.py  core_algo.py  data.py  evaluation.py  iteration_terminators.py  optimizers.py  optimizers_exp.py  pupil.npy  synthetic_data.py  utils.py
fpm_py/experimental/: algorithm.py  main.py  matlab_reader.py
tests/: test_utils.py
