[tool.poetry]
name = "fpm-py"
version = "0.0.0"
description = "A Python library for implementing Fourier ptychography algorithms to enhance captured images"
authors = [
    "Robin Cunningham <rspcunningham@gmail.com>", 
    "Sammy Farnum <sfarnum1132@gmail.com>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rspcunningham/fpm-py"
homepage = "https://www.parasight.ca"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
