[tool.poetry]
name = "fpm-py"
version = "0.0.0"
description = "A Python library for implementing Fourier ptychography algorithms to enhance captured images"
authors = [
    "Robin Cunningham <rspcunningham@gmail.com>", 
    "Sammy Farnum <sfarnum1132@gmail.com>"
]
readme = "MODULE_README.md"
license = "MIT"
repository = "https://github.com/rspcunningham/fpm-py"
homepage = "https://www.parasight.ca"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"


[tool.poetry.group.dev.dependencies]
numpy = "^2.0.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
